# Auditor-Bot-Discord

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
src/: index.js
src/events/: ClientReady.js  InteractionCreate.js
src/templates/: command-template.js  config-template.json  event-template.js
