[tool.poetry]
name = "auditor-bot-discord"
version = "0.1.0"
description = "An Auditor Bot for Discord created in Python"
authors = ["James Miller <32822936+JMTNTBANG@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
